<resources>
    <string name="app_name">방빌려</string>
    <string name="title_rooms">강의실 목록</string>
    <string name="title_calendar">주간 일정</string>
    <string name="title_qr">QR 체크인</string>
    <string name="title_my_reservations">내 예약</string>
    <string name="title_reservation_detail">예약 상세</string>
    <string name="title_create_reservation">새 예약 만들기</string>
    <string name="menu_rooms">강의실</string>
    <string name="menu_calendar">캘린더</string>
    <string name="menu_qr">체크인</string>
    <string name="menu_my">내 예약</string>
    <string name="menu_profile">프로필</string>
    <string name="label_search_room">강의실 검색</string>
    <string name="chip_all">전체</string>
    <string name="chip_available">예약 가능</string>
    <string name="chip_reserved">예약됨</string>
    <string name="chip_large">대형 강의실</string>
    <string name="calendar_prev_week">◀ 이전</string>
    <string name="calendar_next_week">다음 ▶</string>
    <string name="calendar_today">오늘</string>
    <string name="check_in_manual">수동 코드 입력</string>
    <string name="check_in_start">QR 스캔 시작</string>
    <string name="check_in_success">체크인 완료되었어요!</string>
    <string name="permission_camera_denied">카메라 권한이 필요합니다.</string>
    <string name="reservation_cancel">취소</string>
    <string name="reservation_edit">수정</string>
    <string name="reservation_check_in">QR 체크인</string>
    <string name="reservation_detail_rules">예약 규칙</string>
    <string name="reservation_create">➕ 새 예약 만들기</string>

    <!-- 로그인 -->
    <string name="login_title">로그인</string>
    <string name="login_subtitle">방빌려에 오신 것을 환영합니다</string>
    <string name="no_account_yet">아직 계정이 없으신가요?</string>

    <!-- 회원가입 -->
    <string name="register_title">회원가입</string>
    <string name="register_subtitle">새 계정을 만들어보세요</string>
    <string name="already_have_account">이미 계정이 있으신가요?</string>

    <!-- 입력 필드 -->
    <string name="hint_email">이메일</string>
    <string name="hint_password">비밀번호</string>
    <string name="hint_password_confirm">비밀번호 확인</string>
    <string name="hint_student_id">학번</string>
    <string name="hint_name">이름</string>
    <string name="hint_display_name">이름 (선택)</string>

    <!-- 액션 -->
    <string name="action_login">로그인</string>
    <string name="action_register">회원가입</string>

    <!-- 메시지 -->
    <string name="message_login_success">환영합니다!</string>
    <string name="message_register_success">가입이 완료되었습니다.</string>

    <!-- 에러 메시지 -->
    <string name="error_invalid_email">올바른 이메일을 입력해주세요.</string>
    <string name="error_password_short">비밀번호는 6자 이상이어야 합니다.</string>
    <string name="error_password_confirm_empty">비밀번호 확인을 입력해주세요.</string>
    <string name="error_password_mismatch">비밀번호가 일치하지 않습니다.</string>
    <string name="error_student_id_empty">학번을 입력해주세요.</string>
    <string name="error_name_empty">이름을 입력해주세요.</string>
    <string name="error_generic">잠시 후 다시 시도해주세요.</string>
    <string name="profile_title">프로필</string>
    <string name="profile_email">이메일</string>
    <string name="profile_display_name">이름</string>
    <string name="profile_logout">로그아웃</string>
    <string name="profile_last_login">마지막 로그인</string>
    <string name="menu_timetable">시간표</string>
    <string name="title_timetable">시간표 관리</string>
    <string name="timetable_upload_csv">CSV 업로드</string>
    <string name="timetable_download_template">템플릿 다운로드</string>
    <string name="timetable_add_course">수업 추가</string>
    <string name="timetable_parse_success">시간표를 성공적으로 가져왔습니다</string>
    <string name="timetable_parse_error">CSV 파일 형식이 올바르지 않습니다</string>
</resources>
